refactor: 스페이스 수정 로직 리팩토링